#8 Creation Tierlist controller + service + openapi
